# theseus

./: .gitignore  .mcp.json  .prettierignore  CLAUDE.md  Cargo.toml  README.md
.agents/skills/git-commit/: SKILL.md
.agents/skills/rust-hexagonal/: SKILL.md
.agents/skills/rust-hexagonal/references/: adapters.md  domain.md  operations.md  ports.md  services.md  testing.md
.agents/skills/rust-style/: SKILL.md
.agents/skills/rust-style/references/: errors.md  organization.md  patterns.md  types.md
.claude/agents/: design-principles-reviewer.md  rust-architecture-reviewer.md  rust-code-reviewer.md
.github/workflows/: ci.yml
.trunk/: trunk.yaml
.trunk/configs/: .rustfmt.toml
adopters/journal/: Cargo.toml  model.json  theseus.json
adopters/journal/rust/cli/: Cargo.toml
adopters/journal/rust/cli/src/: generated.rs  main.rs
adopters/journal/rust/journal/: Cargo.toml
adopters/journal/rust/journal/src/: generated.rs  lib.rs  service.rs
adopters/journal/rust/model/: Cargo.toml
adopters/journal/rust/model/src/: lib.rs
docs/: adding-an-operation.md  affordance-projector.md  agent-surface-plan.md  building-a-calculator.md  building-the-harness.md  rust-hexagonal-architecture-guide.md  rust-style-guide.md  second-adopter.md  technical-report-abstract.md  technical-report.md  what-next.md
evals/: README.md  goal-7-2026-07-12.md
rust/agent/: Cargo.toml
rust/agent/src/: adapters.rs  agent.rs  anthropic.rs  generated.rs  main.rs
rust/calculator/: Cargo.toml
rust/calculator-cli/: Cargo.toml
rust/calculator-cli/src/: generated.rs  main.rs
rust/calculator-grpc/: Cargo.toml  build.rs
rust/calculator-grpc-client/: Cargo.toml  build.rs
rust/calculator-grpc-client/proto/: calculator.proto
rust/calculator-grpc-client/src/: generated.rs  lib.rs
rust/calculator-grpc-client/tests/: round_trip.rs
rust/calculator-grpc/src/: generated.rs  lib.rs  main.rs
rust/calculator/src/: generated.rs  lib.rs  service.rs
rust/cli/: Cargo.toml
rust/cli/src/: generated.rs  main.rs  service.rs
rust/cli/tests/: develops_theseus.rs
rust/evals/: Cargo.toml
rust/evals/src/: main.rs  record.rs  registry.rs  run.rs
rust/grpc/: Cargo.toml  build.rs
rust/grpc-client/: Cargo.toml  build.rs
rust/grpc-client/proto/: theseus.proto
rust/grpc-client/src/: generated.rs  lib.rs
rust/grpc-client/tests/: round_trip.rs
rust/grpc/proto/: theseus.proto
rust/grpc/src/: generated.rs  lib.rs  main.rs
rust/http/: Cargo.toml
rust/http-client/: Cargo.toml
rust/http-client/src/: generated.rs  lib.rs
rust/http-client/tests/: round_trip.rs
rust/http/src/: generated.rs  lib.rs  main.rs
rust/kernel/: Cargo.toml
rust/kernel/src/: lib.rs
rust/mcp/: Cargo.toml
rust/mcp/src/: main.rs  server.rs
rust/model/: Cargo.toml
rust/model/src/: lib.rs  self_model.rs
rust/modeling/: Cargo.toml
rust/modeling/examples/: generic_projector.rs
rust/modeling/src/: authored.rs  codegen.rs  coverage.rs  dsl.rs  flow.rs  gate.rs  hash.rs  implement.rs  invoke.rs  label.rs  lib.rs  model.rs  outline.rs  patch.rs  path.rs  project.rs  query.rs  scaffold.rs  source.rs  test_support.rs  verify.rs
rust/modeling/src/codegen/: cli.rs  clients.rs  contract.rs  grpc.rs  http.rs  mod.rs  proto.rs  tools.rs
rust/modeling/tests/: build_calculator.rs
rust/text-utils/: Cargo.toml
rust/text-utils/src/: generated.rs  lib.rs  service.rs
rust/theseus/: Cargo.toml
rust/theseus/src/: check_report.rs  checkpoint.rs  checkpoint_model.rs  contracts.rs  generated.rs  implement_result.rs  initialize.rs  lib.rs  project.rs  rust_item_result.rs  service.rs  session.rs  source_document.rs  stateful.rs  workspace_path.rs
rust/theseus/tests/: foreign_project.rs  initialized_project.rs
rust/workspace/: Cargo.toml
rust/workspace/src/: lib.rs  workspace_path.rs
