[workspace]
resolver = "2"
members = ["rust/*"]

[workspace.dependencies]
# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# CLI
# `string` lets clap accept owned `String` values, needed to build the command
# surface from the model at runtime.
clap = { version = "4.6.1", features = ["derive", "env", "string"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2.37"
