[workspace]
resolver = "2"
members = ["rust/*"]

[workspace.dependencies]
# Error handling
anyhow = "1.0.103"
thiserror = "2.0.18"

# CLI
# `string` lets clap accept owned `String` values, needed to build the command
# surface from the model at runtime.
clap = { version = "4.6.1", features = ["derive", "env", "string"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Async runtime (the agent and MCP inbound binaries; the core stays synchronous)
tokio = { version = "1.52", features = ["rt", "macros"] }

# HTTP client for the model adapter (rustls, no system OpenSSL)
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "json",
] }

# HTTP server (the HTTP inbound binary)
axum = "0.8"

# Model Context Protocol server (the external-host inbound)
rmcp = { version = "2.0", features = ["server", "transport-io"] }

# Code generation
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2.37"
