[workspace]
resolver = "2"
members = ["rust/*"]

[workspace.dependencies]
# The engine, for scaffolded service crates whose composition roots carry the model
theseus-modeling = { path = "rust/modeling" }

# Error handling
anyhow = "1.0.103"
heck = "0.5"
thiserror = "2.0.18"
libc = "0.2"

# CLI
# `string` lets clap accept owned `String` values, needed to build the command
# surface from the model at runtime.
clap = { version = "4.6.1", features = ["derive", "env", "string"] }

# Async trait methods on the generated contracts, so port and service traits
# stay usable through trait objects
async-trait = "0.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Async runtime (the agent and MCP inbound binaries; the core stays synchronous)
tokio = { version = "1.52", features = ["rt", "macros"] }

# HTTP client for the model adapter (rustls, no system OpenSSL)
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "json",
] }

# HTTP server (the HTTP inbound binary)
axum = "0.8"

# gRPC server (the gRPC inbound binary). The proto contract compiles in-build
# through a pure-Rust compiler.
prost = "0.14"
protox = "0.9"
protox-parse = "0.9"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

# Streams over listeners, for tests that serve gRPC on an ephemeral port
tokio-stream = "0.1"

# Model Context Protocol server (the external-host inbound)
rmcp = { version = "2.0", features = ["server", "transport-io"] }

# Code generation
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2.37"
