[workspace]
resolver = "2"
members = ["rust/*"]

[workspace.dependencies]
theseus-modeling = { path = "../../rust/modeling" }

anyhow = "1.0.103"
async-trait = "0.1.89"
clap = "4.5.51"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt"] }
