[package]
name = "theseus-calculator-cli"
version = "0.1.0"
edition = "2024"
description = "A standalone command-line calculator built from the Calculator service"

[[bin]]
name = "calculator"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

theseus-calculator = { path = "../calculator" }
