[package]
name = "theseus-cli"
version = "0.1.0"
edition = "2024"
description = "Theseus's command-line interface"

[[bin]]
name = "theseus"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

theseus = { path = "../theseus" }
theseus-calculator = { path = "../calculator" }
theseus-calculator-grpc-client = { path = "../calculator-grpc-client" }
theseus-http-client = { path = "../http-client" }
theseus-model = { path = "../model" }
theseus-modeling = { path = "../modeling" }
