[package]
name = "theseus-modeling"
version = "0.1.0"
edition = "2024"
description = "General-purpose architecture modeling"

[dependencies]
heck = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
protox-parse = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }

theseus-kernel = { path = "../kernel" }
