[package]
name = "theseus"
version = "0.1.0"
edition = "2024"
description = "The Theseus self-modeling service"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "process",
  "rt",
  "sync",
] }

theseus-calculator = { path = "../calculator" }
theseus-model = { path = "../model" }
theseus-modeling = { path = "../modeling" }
theseus-workspace = { path = "../workspace" }
