[package]
name = "theseus-workspace"
version = "0.1.0"
edition = "2024"
description = "Crash-recoverable workspace transactions for Theseus projectors"

[dependencies]
async-trait = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
