[package]
name = "journal-model"
version = "0.1.0"
edition = "2024"
description = "The journal's model of record — a second adopter of the Theseus engine"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

theseus-modeling = { path = "../../../../rust/modeling" }
theseus-workspace = { path = "../../../../rust/workspace" }
